[gd_scene load_steps=47 format=3 uid="uid://bjsndylbc2kdv"]

[ext_resource type="Texture2D" uid="uid://cxu30itd65mcc" path="res://boss/lampor/lampor.png" id="1_bds4y"]
[ext_resource type="Script" path="res://boss/lampor/lampor.gd" id="1_pfv3w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q0tkf"]
atlas = ExtResource("1_bds4y")
region = Rect2(0, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk6qs"]
atlas = ExtResource("1_bds4y")
region = Rect2(500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_2g7kx"]
atlas = ExtResource("1_bds4y")
region = Rect2(1000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ov4v"]
atlas = ExtResource("1_bds4y")
region = Rect2(1500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_7giv8"]
atlas = ExtResource("1_bds4y")
region = Rect2(2000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk8rp"]
atlas = ExtResource("1_bds4y")
region = Rect2(2500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw05e"]
atlas = ExtResource("1_bds4y")
region = Rect2(3000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1jj6"]
atlas = ExtResource("1_bds4y")
region = Rect2(3500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0tt5"]
atlas = ExtResource("1_bds4y")
region = Rect2(4000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsw5x"]
atlas = ExtResource("1_bds4y")
region = Rect2(4500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux52p"]
atlas = ExtResource("1_bds4y")
region = Rect2(5000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_000pe"]
atlas = ExtResource("1_bds4y")
region = Rect2(5500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_81vr0"]
atlas = ExtResource("1_bds4y")
region = Rect2(6000, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdh6i"]
atlas = ExtResource("1_bds4y")
region = Rect2(6500, 2000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipxqg"]
atlas = ExtResource("1_bds4y")
region = Rect2(0, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_rks50"]
atlas = ExtResource("1_bds4y")
region = Rect2(500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7tde"]
atlas = ExtResource("1_bds4y")
region = Rect2(1000, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_uty5y"]
atlas = ExtResource("1_bds4y")
region = Rect2(1500, 0, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhm7t"]
atlas = ExtResource("1_bds4y")
region = Rect2(0, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ms1u"]
atlas = ExtResource("1_bds4y")
region = Rect2(500, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys8xi"]
atlas = ExtResource("1_bds4y")
region = Rect2(1000, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl501"]
atlas = ExtResource("1_bds4y")
region = Rect2(1500, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_jayrt"]
atlas = ExtResource("1_bds4y")
region = Rect2(2000, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_mt56c"]
atlas = ExtResource("1_bds4y")
region = Rect2(2500, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_f04iq"]
atlas = ExtResource("1_bds4y")
region = Rect2(3000, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_imq4d"]
atlas = ExtResource("1_bds4y")
region = Rect2(3500, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4mne"]
atlas = ExtResource("1_bds4y")
region = Rect2(4000, 1000, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_076wf"]
atlas = ExtResource("1_bds4y")
region = Rect2(0, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_wc2ja"]
atlas = ExtResource("1_bds4y")
region = Rect2(500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecri8"]
atlas = ExtResource("1_bds4y")
region = Rect2(1000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_08bwv"]
atlas = ExtResource("1_bds4y")
region = Rect2(1500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b6yl"]
atlas = ExtResource("1_bds4y")
region = Rect2(2000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tyl4"]
atlas = ExtResource("1_bds4y")
region = Rect2(2500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmhew"]
atlas = ExtResource("1_bds4y")
region = Rect2(3000, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv5wx"]
atlas = ExtResource("1_bds4y")
region = Rect2(3500, 500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0y45"]
atlas = ExtResource("1_bds4y")
region = Rect2(0, 1500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bsly"]
atlas = ExtResource("1_bds4y")
region = Rect2(500, 1500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1w7h"]
atlas = ExtResource("1_bds4y")
region = Rect2(1000, 1500, 500, 500)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpeaa"]
atlas = ExtResource("1_bds4y")
region = Rect2(1500, 1500, 500, 500)

[sub_resource type="SpriteFrames" id="SpriteFrames_fo4o8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0tkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk6qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2g7kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ov4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7giv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk8rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw05e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1jj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0tt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsw5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux52p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_000pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81vr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdh6i")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipxqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rks50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7tde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uty5y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhm7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ms1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys8xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys8xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys8xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl501")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jayrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mt56c")
}],
"loop": false,
"name": &"skill1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f04iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imq4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4mne")
}],
"loop": false,
"name": &"skill11",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_076wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wc2ja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecri8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08bwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08bwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08bwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b6yl")
}],
"loop": false,
"name": &"skill2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tyl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmhew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv5wx")
}],
"loop": false,
"name": &"skill22",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0y45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bsly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1w7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpeaa")
}],
"loop": true,
"name": &"skill3",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fhg4p"]
size = Vector2(74, 238)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbhyh"]
size = Vector2(84, 237)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rspci"]
size = Vector2(105, 263)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rmknu"]
size = Vector2(319, 63.5)

[node name="lampor" type="CharacterBody2D"]
show_behind_parent = true
collision_layer = 64
script = ExtResource("1_pfv3w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(10, 0)
sprite_frames = SubResource("SpriteFrames_fo4o8")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 0
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_fhg4p")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(1, 9.5)
shape = SubResource("RectangleShape2D_jbhyh")

[node name="Hitbox" type="Area2D" parent="." groups=["HitboxEnemies"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(-58.5, -6.5)
shape = SubResource("RectangleShape2D_rspci")
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
light_mask = 2
visibility_layer = 2
position = Vector2(25.5, 15.25)
shape = SubResource("RectangleShape2D_rmknu")
disabled = true

[node name="TimerSkill" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="TimerSkill" to="." method="_on_timer_skill_timeout"]
